<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".CheckInList.CheckInListActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:text="@string/check_in_list_header"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5sp"
        android:background="?attr/colorAccent" />

    <ListView
        android:id="@+id/attendee_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp" />
</LinearLayout>