...
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/event_list_activity_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_event_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create Event"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
