...
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnViewMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:backgroundTint="?attr/colorAccent"
        android:text="Check-In Map"
        android:visibility="gone"
...
